--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap");
 
 :root {
-  --primary: #1aac83;
-  --error: #e7195a;
+  --green: #3cB043;
+  --pink: #e7195a;
 }
 
 html,
