--- a/client/src/components/agentLogin/AgentLogin.css
+++ b/client/src/components/agentLogin/AgentLogin.css
@@ -30,7 +30,7 @@ p {
   color: gray;
 }
 
-button {
+.agent-login button {
   background: var(--pink);
   border: 0;
   color: #fff;
@@ -38,10 +38,10 @@ button {
   border-radius: 24px;
   cursor: pointer;
 }
-button:hover{
+.agent-login button:hover{
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.505);
 }
-button:active{
+.agent-login button:active{
 
   box-shadow: inset 0 0 5px #ffffffa1;
 }
