--- a/client/src/pages/chatInterface/ChatInterface.css
+++ b/client/src/pages/chatInterface/ChatInterface.css
@@ -4,13 +4,14 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(10, 1fr);
   padding: 15px;
-
 }
-.chat-Interface-header{
+.chat-Interface-header {
   display: grid;
   grid-row-start: 1;
   grid-row-end: 2;
   grid-column-start: 1;
   grid-column-end: 4;
   justify-self: stretch;
+  margin-left: 20px;
+  align-self: end;
 }
