--- a/client/src/components/chatBar/ChatBar.css
+++ b/client/src/components/chatBar/ChatBar.css
@@ -1,9 +1,30 @@
-.chat-bar{
+.chat-bar {
   display: grid;
- grid-row-start: 10;
+  grid-template-columns: minmax(auto, 1fr) minmax(auto, auto);
+  grid-row-start: 10;
   grid-row-end: 11;
   grid-column-start: 2;
   grid-column-end: 4;
-  justify-self: stretch;
-  border-style: solid;
+  justify-content: start;
+  box-shadow: inset 5px -5px 15px -9px rgba(0,0,0,0.49);
+padding-left: 5px;
+}
+
+.chat-bar-input {
+  border-radius: 20px;
+  padding: 15px;
+}
+.chat-bar-button  {
+  border: none;
+  color: var(--pink);
+  
+}
+.chat-bar-button svg{
+  
+  height: 70%;
+  width: auto;
+  transition: transform 0.2s ease-in-out;
+}
+.chat-bar-button:active svg {
+  transform: scale(0.9);
 }
