--- a/client/src/components/chatBox/ChatBox.css
+++ b/client/src/components/chatBox/ChatBox.css
@@ -1,5 +1,5 @@
 .chat-box {
-  padding: 10px;
+  padding: 5px;
   align-content: start;
   overflow: auto;
   display: grid;
@@ -8,5 +8,6 @@
   grid-column-start: 2;
   grid-column-end: 4;
   justify-self: stretch;
-  border-style: solid;
+  box-shadow: inset 5px 5px 15px -9px rgba(0,0,0,0.49);
+  /* border-radius: 15px; */
 }
