--- a/costumer-widget/src/components/ChatBubble/ChatBubble.css
+++ b/costumer-widget/src/components/ChatBubble/ChatBubble.css
@@ -1,12 +1,34 @@
+@keyframes shake {
+  /* 0%{
+    transform: rotate(0deg);
+  }  */
+  25%{
+  transform: rotate(-20deg);
+   } 
+   50% {
+    transform: rotate(20deg);
+  }
+ 75% {
+    transform: rotate(-20deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
 
 .chat-bubble {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background-color: #007bff;
-  color: white;
   padding: 10px;
-  border-radius: 50%;
   cursor: pointer;
   z-index: 1000;
+  animation: shake  2s ease-in-out infinite;
+}
+
+.chat-bubble svg {
+  height: 50px;
+  width: 50px;
+  color: var(--pink);
+  margin: auto;
 }
