--- a/costumer-widget/src/components/ChatWindow/ChatWindow.css
+++ b/costumer-widget/src/components/ChatWindow/ChatWindow.css
@@ -1,32 +1,29 @@
-
 .chat-window {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: 90px;
+  right: 90px;
   width: 300px;
   height: 500px;
-  border: 1px solid #ccc;
   border-radius: 10px;
   overflow: hidden;
-  transition: transform 0.3s ease-in-out;
-  transform: translateY(100%);
+  transition: transform 0.5s ease, opacity 2s ease;
   z-index: 1000;
 }
-
-.chat-window.open {
-  transform: translateY(0);
+.chat-window.close {
+  transform: translate(100%, 100%) scale(0);
+  opacity: 0;
+  transition: transform 2s ease, opacity 0.5s ease;
+}
+.chat-window-chat {
+  border: 1px solid #ccc;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 5fr 1fr;
+  box-shadow: inset 0px 0px 20px -7px rgba(0, 0, 0, 0.49);
 }
 
-.header {
-  background-color: #007bff;
-  color: white;
-  padding: 10px;
+.chat-window-form{
+  height: 100%;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  cursor: pointer;
-}
-
-.header span {
-  font-size: 20px;
+  justify-content: center;
 }
