--- a/costumer-widget/src/components/chatBox/ChatBox.css
+++ b/costumer-widget/src/components/chatBox/ChatBox.css
@@ -1,9 +1,24 @@
 .chat-box {
-  padding: 5px;
+  position: relative;
+  padding: 0 5px;
   align-content: start;
   overflow: auto;
   display: grid;
   justify-self: stretch;
   box-shadow: 0px 10px 10px -15px rgba(0, 0, 0, 0.49);
-  
+}
+.chat-box-timer {
+  position: fixed;
+  padding: 0 5px;
+  font-size:medium;
+font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+justify-self: center;
+border-radius:0 0 10PX 10px;
+  background-color: #ff291abe;
+  color: white;
+}
+.chat-box-timer p {
+margin: 0;
+text-align: center;
+
 }
