--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -1,14 +1,16 @@
-header .navbar {
-  margin: 0 auto;
-  padding: 10px 20px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+.pages header {
+  padding: 15px 20px;
 }
 header a {
   color: #333;
   text-decoration: none;
   
 }
-
+.navbar h1{
+  padding-bottom: 10px;
+  border-bottom: solid 0.5px #333;
+}
+.active{
+  color: var(--pink);
+}
 
